@@ -27,6 +27,8 @@ Other information:
 Changes since the last public release (1.6.11):
 
 Version 1.6.12beta01 [June 6, 2014]
+  Relocated new code from 1.6.11beta06 in png.c to a point after the
+    declarations (Max Stepin).
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
